<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical">

    <!--IP-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingEnd="12dp"
        android:paddingStart="12dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/all_title_ip"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/et_input_ip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="15"
            android:hint="例如：192.168.1.1"
            android:inputType="text"
            android:text="10.136.193.39"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <!--Port-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:paddingEnd="12dp"
        android:paddingStart="12dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/all_title_ip_port"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/et_inout_port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="8080"
            android:inputType="number"
            android:text="8080"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <!--需要发送的信息-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:paddingEnd="12dp"
        android:paddingStart="12dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/all_title_msg"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/et_inout_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="请输入发送的信息"
            android:inputType="number"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <!--客户端操作-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:paddingBottom="12dp"
        android:paddingTop="12dp">

        <!--建立连接-->
        <Button
            android:id="@+id/btn_build_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_build_connect" />

        <!--断开连接-->
        <Button
            android:id="@+id/btn_build_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/btn_build_disconnect" />

        <!--重新连接-->
        <Button
            android:id="@+id/btn_build_reconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_build_reconnect" />

    </LinearLayout>
    <!--发送命令-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:paddingBottom="12dp"
        android:paddingTop="12dp">

        <!--发送开始命令-->
        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:text="@string/btn_start"
            tools:ignore="RtlHardcoded" />

        <!--发送退出命令-->
        <Button
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/btn_exit"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:paddingBottom="12dp">

        <!--接收消息-->
        <Button
            android:id="@+id/btn_build_receive_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/btn_build_send_msg" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_info_connect"
            android:textSize="12sp" />
    </ScrollView>

</LinearLayout>